--- a/20.04/Dockerfile.arm64
+++ b/20.04/Dockerfile.arm64
@@ -40,7 +40,7 @@ RUN find $INST_SCRIPTS -name '*.sh' -exec chmod a+x {} +
 
 ### Install some common tools
 RUN $INST_SCRIPTS/tools.sh
-ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
+ENV LANG='zh_CN.UTF-8' LANGUAGE='zh_CN:en_US' LC_ALL='zh_CN.UTF-8'
 
 ### Install custom fonts
 RUN $INST_SCRIPTS/install_custom_fonts.sh
